{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 237,
  "lineage": "c5383b73-cda3-0ded-af55-3b347cb33096",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "udacity",
            "metadata": [
              {
                "generation": 0,
                "name": "udacity",
                "resource_version": "997",
                "uid": "633e7fc5-ed6d-42ef-9dbb-8a5d3036cead"
              }
            ]
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.project_eks.aws_eks_cluster.cluster",
            "module.project_eks.aws_eks_node_group.node",
            "module.project_eks.aws_iam_policy.eks_cluster_role_cloudwatch_policy",
            "module.project_eks.aws_iam_policy.eks_node_instance_policy",
            "module.project_eks.aws_iam_role.eks_cluster_role",
            "module.project_eks.aws_iam_role.eks_node_cluster_role",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSCloudwatchPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.project_eks.aws_iam_role_policy_attachment.node_CloudWatchAgentServerPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_harmony_policy_attachment",
            "module.project_eks.data.aws_iam_policy_document.eks_assume_role_policy",
            "module.project_eks.data.aws_iam_policy_document.eks_node_assume_role_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9e06a6c2baa44c4",
            "arn": "arn:aws:ec2:us-east-2:486152540677:instance/i-0f687e3127fcafa2a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f687e3127fcafa2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "udacity",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0166ee89962f9c7a2",
            "private_dns": "ip-172-31-29-126.us-east-2.compute.internal",
            "private_ip": "172.31.29.126",
            "public_dns": "ec2-18-117-125-142.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.125.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08a91ea74a56a111f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa76953d5d8ff5c9",
            "tags": {
              "Name": "ubuntu"
            },
            "tags_all": {
              "Name": "ubuntu",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b6aedddc4aac7f50"
            ]
          }
        }
      ]
    },
    {
      "module": "module.project_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:security-group/sg-05686e5c898f8829f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05686e5c898f8829f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "monitoring",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "web port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "486152540677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04da5fa5b3ef26ae8",
            "domain": "vpc",
            "id": "eipalloc-04da5fa5b3ef26ae8",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-13-197-172.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.197.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "udacity-project-us-east-2a"
            },
            "tags_all": {
              "Name": "udacity-project-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:internet-gateway/igw-0b2abad09ee3fc0eb",
            "id": "igw-0b2abad09ee3fc0eb",
            "owner_id": "486152540677",
            "tags": {
              "Name": "udacity-project"
            },
            "tags_all": {
              "Name": "udacity-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04da5fa5b3ef26ae8",
            "connectivity_type": "public",
            "id": "nat-0c2c29257dd791ec2",
            "network_interface_id": "eni-08745c7a937ce42b0",
            "private_ip": "10.100.10.167",
            "public_ip": "3.13.197.172",
            "subnet_id": "subnet-0f1a10b183b9aa629",
            "tags": {
              "Name": "udacity-project-us-east-2a"
            },
            "tags_all": {
              "Name": "udacity-project-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c678a81d4a0105581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c2c29257dd791ec2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c678a81d4a010558",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0931ff7a94bbb3e041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c2c29257dd791ec2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0931ff7a94bbb3e04",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0240323e39fe4bf0b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c2c29257dd791ec2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0240323e39fe4bf0b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2abad09ee3fc0eb",
            "id": "r-rtb-0b87ec1be16a69aed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b87ec1be16a69aed",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2abad09ee3fc0eb",
            "id": "r-rtb-0b87ec1be16a69aed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b87ec1be16a69aed",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2abad09ee3fc0eb",
            "id": "r-rtb-0b87ec1be16a69aed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b87ec1be16a69aed",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:route-table/rtb-0c678a81d4a010558",
            "id": "rtb-0c678a81d4a010558",
            "owner_id": "486152540677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "udacity-project-private-us-east-2a"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:route-table/rtb-0931ff7a94bbb3e04",
            "id": "rtb-0931ff7a94bbb3e04",
            "owner_id": "486152540677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "udacity-project-private-us-east-2b"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:route-table/rtb-0240323e39fe4bf0b",
            "id": "rtb-0240323e39fe4bf0b",
            "owner_id": "486152540677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "udacity-project-private-us-east-2c"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:route-table/rtb-0b87ec1be16a69aed",
            "id": "rtb-0b87ec1be16a69aed",
            "owner_id": "486152540677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "udacity-project-public"
            },
            "tags_all": {
              "Name": "udacity-project-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c41bcc6f391a7c72",
            "route_table_id": "rtb-0c678a81d4a010558",
            "subnet_id": "subnet-04311c6ec8d40c9ed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0324851e0d4377298",
            "route_table_id": "rtb-0931ff7a94bbb3e04",
            "subnet_id": "subnet-0f5da981d8f5c535d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a79f0d79db3a97c9",
            "route_table_id": "rtb-0240323e39fe4bf0b",
            "subnet_id": "subnet-0e1f38e60ad7d0c09"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081e97378abaa5ce5",
            "route_table_id": "rtb-0b87ec1be16a69aed",
            "subnet_id": "subnet-0f1a10b183b9aa629"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c1b9c89b103e6a8",
            "route_table_id": "rtb-0b87ec1be16a69aed",
            "subnet_id": "subnet-0b413372843b0b3bc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0316b9292933b94a6",
            "route_table_id": "rtb-0b87ec1be16a69aed",
            "subnet_id": "subnet-09cf327bf64e20d02"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:subnet/subnet-04311c6ec8d40c9ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04311c6ec8d40c9ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486152540677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-east-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:subnet/subnet-0f5da981d8f5c535d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5da981d8f5c535d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486152540677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-east-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:subnet/subnet-0e1f38e60ad7d0c09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1f38e60ad7d0c09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486152540677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-east-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2c",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:subnet/subnet-0f1a10b183b9aa629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1a10b183b9aa629",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "486152540677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-east-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:subnet/subnet-0b413372843b0b3bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b413372843b0b3bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "486152540677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-east-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:subnet/subnet-09cf327bf64e20d02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.100.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cf327bf64e20d02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "486152540677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-east-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-east-2c",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092a2ad4a6ec0efa8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:486152540677:vpc/vpc-092a2ad4a6ec0efa8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-01f3d8959243afce2",
            "default_route_table_id": "rtb-0f323f16fee0e4e4f",
            "default_security_group_id": "sg-071f8b2622f354fb6",
            "dhcp_options_id": "dopt-022c6e9c1132f2192",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092a2ad4a6ec0efa8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f323f16fee0e4e4f",
            "owner_id": "486152540677",
            "tags": {
              "Name": "udacity-project"
            },
            "tags_all": {
              "Name": "udacity-project",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}